# dobot_ros

./: .gitignore  README.md  note.txt
ros_ws/src/buffing_planner/: CMakeLists.txt  package.xml
ros_ws/src/buffing_planner/meshes/: tunning_fork.stl
ros_ws/src/buffing_planner/src/: stl_loader_node.cpp
ros_ws/src/cr5_description/: CMakeLists.txt  package.xml
ros_ws/src/cr5_description/launch/: cr5_simulation.launch.py  cr5s_bringup.launch.py  robot_state.launch.py  rviz.launch.py
ros_ws/src/cr5_description/meshes/: g_left.dae  g_right.dae  gripper.dae
ros_ws/src/cr5_description/rviz/: simulation.rviz
ros_ws/src/cr5_description/urdf/: cr5.urdf.xacro  ros2control.xacro  utils.xacro
ros_ws/src/cr5_joint_state_publisher/: package.xml  setup.cfg  setup.py
ros_ws/src/cr5_joint_state_publisher/cr5_joint_state_publisher/: jsp.py
ros_ws/src/cr5_message_type/: CMakeLists.txt  package.xml
ros_ws/src/cr5_message_type/msg/: DigitalInOut.msg  JointSpeed.msg  TcpPosition.msg
ros_ws/src/cr5_moveit_control/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/cr5_moveit_control/config/: cr5_robot.srdf  cr5_robot.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
ros_ws/src/cr5_moveit_control/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros_ws/src/cr5_robot_status_publisher/: package.xml  setup.cfg  setup.py
ros_ws/src/cr5_robot_status_publisher/cr5_robot_status_publisher/: robot_status.py  tcp_client.py
ros_ws/src/dobot_cr5s_hardware/: CMakeLists.txt  dobot_cr5s_hardware_plugin.xml  package.xml
ros_ws/src/dobot_cr5s_hardware/config/: cr5s_ros2_control.yaml
ros_ws/src/dobot_cr5s_hardware/launch/: ros2_control.launch.py
ros_ws/src/dobot_cr5s_hardware/src/: dobot_cr5s_system.cpp
ros_ws/src/dobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/dobot_moveit/config/: cr5_robot.ros2_control.xacro  cr5_robot.srdf  initial_positions.yaml  joint_limits.yaml  (+2 more)
(+9 files in other folders)
